# TestTask

./: CMakeLists.txt  README.md  generation.h  main.cpp  out.cpp  out.h  parser.cpp  parser.h  struct.h
src/: generation.cpp  generation.h  out.h  parser.h  struct.h
